@@ -68,28 +68,29 @@ package require <b>pdf4tcl ?0.5?</b><br>
 <tr valign=top ><td ><a href="#20"><i class='arg'>objectName</i> <strong>getCharWidth</strong> <i class='arg'>char</i></a></td></tr>
 <tr valign=top ><td ><a href="#21"><i class='arg'>objectName</i> <strong>setTextPosition</strong> <i class='arg'>x</i> <i class='arg'>y</i></a></td></tr>
 <tr valign=top ><td ><a href="#22"><i class='arg'>objectName</i> <strong>moveTextPosition</strong> <i class='arg'>x</i> <i class='arg'>y</i></a></td></tr>
-<tr valign=top ><td ><a href="#23"><i class='arg'>objectName</i> <strong>newLine</strong> ?<i class='arg'>spacing</i>?</a></td></tr>
-<tr valign=top ><td ><a href="#24"><i class='arg'>objectName</i> <strong>setLineSpacing</strong> <i class='arg'>spacing</i></a></td></tr>
-<tr valign=top ><td ><a href="#25"><i class='arg'>objectName</i> <strong>getLineSpacing</strong></a></td></tr>
-<tr valign=top ><td ><a href="#26"><i class='arg'>objectName</i> <strong>text</strong> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#27"><i class='arg'>objectName</i> <strong>drawTextBox</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#28"><i class='arg'>objectName</i> <strong>getFontMetric</strong> <i class='arg'>metric</i></a></td></tr>
-<tr valign=top ><td ><a href="#29"><i class='arg'>objectName</i> <strong>putImage</strong> <i class='arg'>id</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#30"><i class='arg'>objectName</i> <strong>putRawImage</strong> <i class='arg'>data</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#31"><i class='arg'>objectName</i> <strong>addImage</strong> <i class='arg'>filename</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#32"><i class='arg'>objectName</i> <strong>addRawImage</strong> <i class='arg'>data</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#33"><i class='arg'>objectName</i> <strong>setBgColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
-<tr valign=top ><td ><a href="#34"><i class='arg'>objectName</i> <strong>setFillColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
-<tr valign=top ><td ><a href="#35"><i class='arg'>objectName</i> <strong>setStrokeColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
-<tr valign=top ><td ><a href="#36"><i class='arg'>objectName</i> <strong>setLineStyle</strong> <i class='arg'>width</i> <i class='arg'>args</i></a></td></tr>
-<tr valign=top ><td ><a href="#37"><i class='arg'>objectName</i> <strong>line</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a></td></tr>
-<tr valign=top ><td ><a href="#38"><i class='arg'>objectName</i> <strong>qCurve</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>xc</i> <i class='arg'>yc</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a></td></tr>
-<tr valign=top ><td ><a href="#39"><i class='arg'>objectName</i> <strong>polygon</strong> ?<i class='arg'>x y</i>...? ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#40"><i class='arg'>objectName</i> <strong>circle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#41"><i class='arg'>objectName</i> <strong>oval</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radiusx</i> <i class='arg'>radiusy</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#42"><i class='arg'>objectName</i> <strong>arc</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radiusx</i> <i class='arg'>radiusy</i> <i class='arg'>phi</i> <i class='arg'>extend</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#43"><i class='arg'>objectName</i> <strong>arrow</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i> <i class='arg'>size</i> ?<i class='arg'>angle</i>?</a></td></tr>
-<tr valign=top ><td ><a href="#44"><i class='arg'>objectName</i> <strong>rectangle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#23"><i class='arg'>objectName</i> <strong>getTextPosition</strong></a></td></tr>
+<tr valign=top ><td ><a href="#24"><i class='arg'>objectName</i> <strong>newLine</strong> ?<i class='arg'>spacing</i>?</a></td></tr>
+<tr valign=top ><td ><a href="#25"><i class='arg'>objectName</i> <strong>setLineSpacing</strong> <i class='arg'>spacing</i></a></td></tr>
+<tr valign=top ><td ><a href="#26"><i class='arg'>objectName</i> <strong>getLineSpacing</strong></a></td></tr>
+<tr valign=top ><td ><a href="#27"><i class='arg'>objectName</i> <strong>text</strong> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#28"><i class='arg'>objectName</i> <strong>drawTextBox</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#29"><i class='arg'>objectName</i> <strong>getFontMetric</strong> <i class='arg'>metric</i></a></td></tr>
+<tr valign=top ><td ><a href="#30"><i class='arg'>objectName</i> <strong>putImage</strong> <i class='arg'>id</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#31"><i class='arg'>objectName</i> <strong>putRawImage</strong> <i class='arg'>data</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#32"><i class='arg'>objectName</i> <strong>addImage</strong> <i class='arg'>filename</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#33"><i class='arg'>objectName</i> <strong>addRawImage</strong> <i class='arg'>data</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#34"><i class='arg'>objectName</i> <strong>setBgColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
+<tr valign=top ><td ><a href="#35"><i class='arg'>objectName</i> <strong>setFillColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
+<tr valign=top ><td ><a href="#36"><i class='arg'>objectName</i> <strong>setStrokeColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
+<tr valign=top ><td ><a href="#37"><i class='arg'>objectName</i> <strong>setLineStyle</strong> <i class='arg'>width</i> <i class='arg'>args</i></a></td></tr>
+<tr valign=top ><td ><a href="#38"><i class='arg'>objectName</i> <strong>line</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a></td></tr>
+<tr valign=top ><td ><a href="#39"><i class='arg'>objectName</i> <strong>qCurve</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>xc</i> <i class='arg'>yc</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a></td></tr>
+<tr valign=top ><td ><a href="#40"><i class='arg'>objectName</i> <strong>polygon</strong> ?<i class='arg'>x y</i>...? ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#41"><i class='arg'>objectName</i> <strong>circle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#42"><i class='arg'>objectName</i> <strong>oval</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radiusx</i> <i class='arg'>radiusy</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#43"><i class='arg'>objectName</i> <strong>arc</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radiusx</i> <i class='arg'>radiusy</i> <i class='arg'>phi</i> <i class='arg'>extend</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#44"><i class='arg'>objectName</i> <strong>arrow</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i> <i class='arg'>size</i> ?<i class='arg'>angle</i>?</a></td></tr>
+<tr valign=top ><td ><a href="#45"><i class='arg'>objectName</i> <strong>rectangle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> ?<i class='arg'>option value</i>...?</a></td></tr>
 </table></td></tr></table>
 <h2><a name="description">DESCRIPTION</a></h2>
 <p>
@@ -385,7 +386,13 @@ Set coordinate for next text command.
 Move coordinate for next text command.
 
 <br><br>
-<dt><a name="23"><i class='arg'>objectName</i> <strong>newLine</strong> ?<i class='arg'>spacing</i>?</a><dd>
+<dt><a name="23"><i class='arg'>objectName</i> <strong>getTextPosition</strong></a><dd>
+
+
+This method returns the current text coordinate.
+
+<br><br>
+<dt><a name="24"><i class='arg'>objectName</i> <strong>newLine</strong> ?<i class='arg'>spacing</i>?</a><dd>
 
 
 Moves text coordinate down and resets x to where the latest
@@ -394,32 +401,32 @@ be set by <i class='arg'>spacing</i>. This may be any real number, including neg
 and defaults to the value set by <strong>setLineSpacing</strong>.
 
 <br><br>
-<dt><a name="24"><i class='arg'>objectName</i> <strong>setLineSpacing</strong> <i class='arg'>spacing</i></a><dd>
+<dt><a name="25"><i class='arg'>objectName</i> <strong>setLineSpacing</strong> <i class='arg'>spacing</i></a><dd>
 
 
 Set the default line spacing used be e.g. <strong>newLine</strong>.  Initially
 the spacing is 1.
 
 <br><br>
-<dt><a name="25"><i class='arg'>objectName</i> <strong>getLineSpacing</strong></a><dd>
+<dt><a name="26"><i class='arg'>objectName</i> <strong>getLineSpacing</strong></a><dd>
 
 
 Get the current default line spacing.
 
 <br><br>
-<dt><a name="26"><i class='arg'>objectName</i> <strong>text</strong> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="27"><i class='arg'>objectName</i> <strong>text</strong> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 
 Draw text.
 
 <br><br>
-<dt><a name="27"><i class='arg'>objectName</i> <strong>drawTextBox</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="28"><i class='arg'>objectName</i> <strong>drawTextBox</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 
 Draw text.
 
 <br><br>
-<dt><a name="28"><i class='arg'>objectName</i> <strong>getFontMetric</strong> <i class='arg'>metric</i></a><dd>
+<dt><a name="29"><i class='arg'>objectName</i> <strong>getFontMetric</strong> <i class='arg'>metric</i></a><dd>
 
 
 Get information about current font. The available <i class='arg'>metric</i>s are
@@ -436,7 +443,7 @@ unsupported formats, use Tk and the Img package to load and dump images to raw f
 
 <dl>
 
-<dt><a name="29"><i class='arg'>objectName</i> <strong>putImage</strong> <i class='arg'>id</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="30"><i class='arg'>objectName</i> <strong>putImage</strong> <i class='arg'>id</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 
 Put an image on the current page. The image must have been added previously by <strong>addImage</strong> or
@@ -456,7 +463,7 @@ the height is selected to preserve the aspect ratio of the image.
 
 </dl>
 
-<dt><a name="30"><i class='arg'>objectName</i> <strong>putRawImage</strong> <i class='arg'>data</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="31"><i class='arg'>objectName</i> <strong>putRawImage</strong> <i class='arg'>data</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 Put an image on the current page. Works like <strong>putImage</strong> except that the raw image data is given directly.
 
@@ -467,7 +474,7 @@ Put an image on the current page. Works like <strong>putImage</strong> except th
 </pre></td></tr></table></p>
 
 <br><br>
-<dt><a name="31"><i class='arg'>objectName</i> <strong>addImage</strong> <i class='arg'>filename</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="32"><i class='arg'>objectName</i> <strong>addImage</strong> <i class='arg'>filename</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 
 Add an image to the document. Returns an id that can be used in subsequent
@@ -484,7 +491,7 @@ Set the image type.  This can usually be deduced from the file name, this
 option helps when that is not possible.  This can be either &quot;png&quot; or &quot;jpeg&quot;.
 </dl>
 
-<dt><a name="32"><i class='arg'>objectName</i> <strong>addRawImage</strong> <i class='arg'>data</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="33"><i class='arg'>objectName</i> <strong>addRawImage</strong> <i class='arg'>data</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 <p><table><tr><td bgcolor=black>&nbsp;</td><td><pre class='sample'>
   image create photo img1 -file image.gif
@@ -504,18 +511,18 @@ any color accepted by winfo rgb is accepted.
 
 <dl>
 
-<dt><a name="33"><i class='arg'>objectName</i> <strong>setBgColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
+<dt><a name="34"><i class='arg'>objectName</i> <strong>setBgColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
 
 Sets the background color for text operations where -bg is true.
 
 <br><br>
-<dt><a name="34"><i class='arg'>objectName</i> <strong>setFillColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
+<dt><a name="35"><i class='arg'>objectName</i> <strong>setFillColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
 
 Sets the fill color for graphics operations, and the foreground color for
 text operations.
 
 <br><br>
-<dt><a name="35"><i class='arg'>objectName</i> <strong>setStrokeColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
+<dt><a name="36"><i class='arg'>objectName</i> <strong>setStrokeColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
 
 Sets the stroke color for graphics operations.
 
@@ -524,24 +531,24 @@ Sets the stroke color for graphics operations.
 <p>
 <dl>
 
-<dt><a name="36"><i class='arg'>objectName</i> <strong>setLineStyle</strong> <i class='arg'>width</i> <i class='arg'>args</i></a><dd>
+<dt><a name="37"><i class='arg'>objectName</i> <strong>setLineStyle</strong> <i class='arg'>width</i> <i class='arg'>args</i></a><dd>
 
-<dt><a name="37"><i class='arg'>objectName</i> <strong>line</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a><dd>
+<dt><a name="38"><i class='arg'>objectName</i> <strong>line</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a><dd>
 
-<dt><a name="38"><i class='arg'>objectName</i> <strong>qCurve</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>xc</i> <i class='arg'>yc</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a><dd>
+<dt><a name="39"><i class='arg'>objectName</i> <strong>qCurve</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>xc</i> <i class='arg'>yc</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a><dd>
 
-<dt><a name="39"><i class='arg'>objectName</i> <strong>polygon</strong> ?<i class='arg'>x y</i>...? ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="40"><i class='arg'>objectName</i> <strong>polygon</strong> ?<i class='arg'>x y</i>...? ?<i class='arg'>option value</i>...?</a><dd>
 
-<dt><a name="40"><i class='arg'>objectName</i> <strong>circle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="41"><i class='arg'>objectName</i> <strong>circle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> ?<i class='arg'>option value</i>...?</a><dd>
 
-<dt><a name="41"><i class='arg'>objectName</i> <strong>oval</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radiusx</i> <i class='arg'>radiusy</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="42"><i class='arg'>objectName</i> <strong>oval</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radiusx</i> <i class='arg'>radiusy</i> ?<i class='arg'>option value</i>...?</a><dd>
 
-<dt><a name="42"><i class='arg'>objectName</i> <strong>arc</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radiusx</i> <i class='arg'>radiusy</i> <i class='arg'>phi</i> <i class='arg'>extend</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="43"><i class='arg'>objectName</i> <strong>arc</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radiusx</i> <i class='arg'>radiusy</i> <i class='arg'>phi</i> <i class='arg'>extend</i> ?<i class='arg'>option value</i>...?</a><dd>
 
-<dt><a name="43"><i class='arg'>objectName</i> <strong>arrow</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i> <i class='arg'>size</i> ?<i class='arg'>angle</i>?</a><dd>
+<dt><a name="44"><i class='arg'>objectName</i> <strong>arrow</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i> <i class='arg'>size</i> ?<i class='arg'>angle</i>?</a><dd>
 
 
-<dt><a name="44"><i class='arg'>objectName</i> <strong>rectangle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="45"><i class='arg'>objectName</i> <strong>rectangle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 
 </dl>
