@@ -1,4 +1,7 @@
 2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
+	* Added getTextPosition method.
+
+2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
 	* Initialise origxpos to avoid error. [Bug 15246]
 
 2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
